Tradução das view + mudanças layout home

--- a/DevWeb_Trab_Final/Views/Dispositivos/Edit.cshtml
+++ b/DevWeb_Trab_Final/Views/Dispositivos/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar Dispositivo</h1>
 
-<h4>Dispositivos</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -39,7 +38,7 @@
                 <span asp-validation-for="ClienteFK" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
