--- a/DevWeb_Trab_Final/Views/Home/Index.cshtml
+++ b/DevWeb_Trab_Final/Views/Home/Index.cshtml
@@ -5,6 +5,8 @@
 }
 
 <style>
+    
+
     .custom-container {
         width: 1200px;
         margin-right: 0;
@@ -27,10 +29,9 @@
         display: table;
     }
 
-    .corpo p {
-        display: table-cell;
-        text-align: center;
-        vertical-align: middle;
+    .introd {
+        font-family: 'Montserrat', sans-serif;
+        font-weight:500 bold 600;
     }
 
     .corpo h1 {
@@ -41,6 +42,10 @@
         padding-top: 20px;
     }
 
+    .introd {
+        font-family: 'Montserrat', sans-serif, bold;
+    }
+
 </style>
 
 <div class="container custom-container">
@@ -48,7 +53,16 @@
         <div class="col custom-column">
             <div class="corpo">
                 <h1 class="text-dark">Serviço de Reparação de Electrodomésticos</h1>
-            </div><br /><br />
+            </div><br />
+           
+            <div class="home-txt">
+                <p class="introd">
+                    Bem-vindo ao nosso site, a sua referência confiável para reparação de eletrodomésticos! Somos uma loja especializada em resolver problemas nos seus aparelhos domésticos. Contamos com uma equipa de técnicos altamente qualificados e experientes, prontos para ajudar em todas as situações.
+                </p>
+                <p class="introd" >Os nossos técnicos são especialistas nas suas áreas, com habilidades únicas e conhecimentos especializados em diversos tipos de eletrodomésticos. Independentemente do problema com a sua máquina de lavar roupa, frigorífico, fogão, máquina de lavar louça, micro-ondas ou outro aparelho, oferecemos soluções eficientes e de qualidade.</p>
+                <p class="introd">Entendemos a importância da confiança ao escolher uma loja de reparação de eletrodomésticos, por isso dedicamo-nos a oferecer um serviço excecional aos nossos clientes. O nosso objetivo é superar as suas expectativas, oferecendo reparações rápidas, eficientes e acessíveis, com um atendimento amigável e personalizado.</p>
+
+            </div>
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingClientes">
@@ -66,14 +80,8 @@
                     </div>
                 </div>
             </div>
-            <div class="home-txt">
-                <p>Anim ullamco occaecat consectetur adipisicing excepteur pariatur labore mollit Lorem. Deserunt elit amet velit incididunt non dolore et magna labore ad. Minim nulla consequat eu minim. Sit sunt excepteur dolor laboris laborum. Aliquip nisi velit tempor veniam et eu veniam reprehenderit sit fugiat adipisicing occaecat veniam.</p>
-                <p>Sint ex enim mollit nostrud Lorem incididunt minim fugiat qui exercitation anim. Voluptate ad Lorem non anim culpa mollit nulla incididunt pariatur enim. Occaecat amet aute laboris veniam pariatur enim labore. Adipisicing ad veniam ex velit esse labore in ea dolore laborum. Labore ea et elit excepteur magna.</p>
-                <p>Fugiat ex esse cillum ea Lorem voluptate duis consequat elit. Proident veniam laboris et elit laborum duis do esse. Esse aliquip sint nulla cillum officia mollit officia sint labore voluptate ea aliqua. Eiusmod id ad in in occaecat id sint est pariatur excepteur.</p>
-
-            </div>
         </div>
-        <div class="col custom-column1">
+        <div class="col custom-column1"><br /><br />
             <img src="~/imagens/reparatech.png" alt="..." class="img-fluid" alt="Responsive image">
         </div>
     </div>
