--- a/DevWeb_Trab_Final/Views/Reparacaos/Edit.cshtml
+++ b/DevWeb_Trab_Final/Views/Reparacaos/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Editar</h1>
+<h1>Editar Reparação</h1>
 
-<h4>Reparação</h4>
 <hr />
 <div class="row">
     <div class="col-md-6">
