--- a/DevWeb_Trab_Final/Views/Dispositivos/Create.cshtml
+++ b/DevWeb_Trab_Final/Views/Dispositivos/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Criar Dispositivo</h1>
 
-<h4>Dispositivos</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -50,14 +49,14 @@
 
             <br />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Funcionarios" asp-action="Administrador">Voltar á lista</a>
 </div>
 
 @section Scripts {
