--- a/DevWeb_Trab_Final/Views/Dispositivos/Delete.cshtml
+++ b/DevWeb_Trab_Final/Views/Dispositivos/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Apagar Dispositivo</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tens a certeza de que queres apagar este dispositivo?</h3>
 <div>
     <h4>Dispositivos</h4>
     <hr />
@@ -45,7 +45,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Apagar" class="btn btn-danger" /> |
         <a asp-controller="Funcionarios" asp-action="Administrador">Voltar á lista</a>
     </form>
 </div>
