--- a/DevWeb_Trab_Final/Views/Dispositivos/Details.cshtml
+++ b/DevWeb_Trab_Final/Views/Dispositivos/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalhes do Dispositivo</h1>
 
 <div>
-    <h4>Dispositivos</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -55,6 +54,6 @@
 
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
     <a asp-controller="Funcionarios" asp-action="Administrador">Voltar á lista</a>
 </div>
