--- a/DevWeb_Trab_Final/Views/Funcionarios/Edit.cshtml
+++ b/DevWeb_Trab_Final/Views/Funcionarios/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar Funcionário</h1>
 
-<h4>Funcionarios</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -29,11 +28,6 @@
                 <span asp-validation-for="CodPostal" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Telemovel" class="control-label"></label>
                 <input asp-for="Telemovel" class="form-control" />
                 <span asp-validation-for="Telemovel" class="text-danger"></span>
@@ -44,7 +38,7 @@
                 <span asp-validation-for="Especializacao" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
