--- a/DevWeb_Trab_Final/Views/Reparacaos/Delete.cshtml
+++ b/DevWeb_Trab_Final/Views/Reparacaos/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Apagar Reparação</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tens a certeza de que queres apagar esta reparação?</h3>
 <div>
-    <h4>Reparacao</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -51,7 +50,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Apagar" class="btn btn-danger" /> |
         <a asp-controller="Funcionarios" asp-action="Administrador">Voltar á lista</a>
     </form>
 </div>
