--- a/DevWeb_Trab_Final/Views/Reparacaos/Details.cshtml
+++ b/DevWeb_Trab_Final/Views/Reparacaos/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalhes da Reparação</h1>
 
 <div>
-    <h4>Reparacao</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -49,6 +48,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
     <a asp-controller="Funcionarios" asp-action="Administrador">Voltar á lista</a>
 </div>
