Tradução das views do manager + update do layout do index reparação

--- a/DevWeb_Trab_Final/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/DevWeb_Trab_Final/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -12,7 +12,7 @@
 <h1>Gerenciar a sua Conta</h1>
 
 <div>
-    <h2>Alterar as Defenições da sua Conta</h2>
+    <h2>Alterar as Definições da sua Conta</h2>
     <hr />
     <div class="row">
         <div class="col-md-3">
