update do layout

--- a/DevWeb_Trab_Final/Views/Dispositivos/Index.cshtml
+++ b/DevWeb_Trab_Final/Views/Dispositivos/Index.cshtml
@@ -36,7 +36,13 @@
                     </div>
                 </div>
             }
+           
         </div>
     }
-}
+    else
+    {
+        <h2>Não existe nenhum dispositivo registado</h2>
+    }
 
+
+}
