--- a/DevWeb_Trab_Final/Views/Reparacaos/Index.cshtml
+++ b/DevWeb_Trab_Final/Views/Reparacaos/Index.cshtml
@@ -14,55 +14,64 @@
 }
 
 @if (User.IsInRole("Cliente")) {
+    try{
+        @if (cliente != null && cliente.Email != null)
+        {
+            <h2>Reparações do @cliente.Nome</h2>
 
-    @if(cliente.Email != null) {
-
-        <h2>Reparações do @cliente.Nome</h2>
-
-        <div class="color-container">
-            <div class="color-box"></div>
-            <span class="color-label">Concluida</span>
-            <div class="color-box" style="background-color:#cfe2ff"></div>
-            <span class="color-label">P/ Concluir</span>
-        </div>
+            <div class="color-container">
+                <div class="color-box"></div>
+                <span class="color-label">Concluida</span>
+                <div class="color-box" style="background-color:#cfe2ff"></div>
+                <span class="color-label">P/ Concluir</span>
+            </div>
         
 
-        <table class="table table-hover" >
-            <thead>
-                <tr style="border-bottom: 1px solid #000000;border-top: 1px solid #000000;">
-                    <th scope="col">Tipo</th>
-                    <th scope="col">Modelo</th>
-                    <th scope="col">Data Inicio</th>
-                    <th scope="col">Data Fim</th>
-                    <th scope="col">Nome Funcionario</th>
+            <table class="table table-hover" >
+                <thead>
+                    <tr style="border-bottom: 1px solid #000000;border-top: 1px solid #000000;">
+                        <th scope="col">Tipo</th>
+                        <th scope="col">Modelo</th>
+                        <th scope="col">Data Inicio</th>
+                        <th scope="col">Data Fim</th>
+                        <th scope="col">Nome Funcionario</th>
 
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var reparacao in dispositivo) {
-                    if (reparacao.DataFim==null) {
-                        <tr style="border-bottom: 2px solid #C0C0C0;">
-                            <th class="table-primary" scope="row">@reparacao.Dispositivo.Tipo</th>
-                            <td class="table-primary">@reparacao.Dispositivo.Modelo</td>
-                            <td class ="table-primary">@reparacao.DataInicio</td>
-                            <td class="table-primary">---------------------------</td>
-                            <td class ="table-primary">@reparacao.Funcionarios.Nome</td>
-                        </tr>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var reparacao in dispositivo) {
+                        if (reparacao.DataFim==null) {
+                            <tr style="border-bottom: 2px solid #C0C0C0;">
+                                <th class="table-primary" scope="row">@reparacao.Dispositivo.Tipo</th>
+                                <td class="table-primary">@reparacao.Dispositivo.Modelo</td>
+                                <td class ="table-primary">@reparacao.DataInicio</td>
+                                <td class="table-primary">---------------------------</td>
+                                <td class ="table-primary">@reparacao.Funcionarios.Nome</td>
+                            </tr>
+                        }
+                        else
+                        {
+                            <tr style="border-bottom:2px solid #C0C0C0;">
+                                <th class="table-success" scope="row">@reparacao.Dispositivo.Tipo</th>
+                                <td class="table-success">@reparacao.Dispositivo.Modelo</td>
+                                <td class="table-success">@reparacao.DataInicio</td>
+                                <td class="table-success">@reparacao.DataFim</td>
+                                <td class="table-success">@reparacao.Funcionarios.Nome</td>
+                            </tr>
+                        }
                     }
-                    else
-                    {
-                        <tr style="border-bottom:2px solid #C0C0C0;">
-                            <th class="table-success" scope="row">@reparacao.Dispositivo.Tipo</th>
-                            <td class="table-success">@reparacao.Dispositivo.Modelo</td>
-                            <td class="table-success">@reparacao.DataInicio</td>
-                            <td class="table-success">@reparacao.DataFim</td>
-                            <td class="table-success">@reparacao.Funcionarios.Nome</td>
-                        </tr>
-                    }
-                }
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        }
+        else
+        {
+            <h2>Não existe nenhuma reparação a ocorrer </h2>
+        }
 
+}
+    catch (Exception)
+    {
+        <h1>Nada</h1>
     }
 }
 <style>
