--- a/DevWeb_Trab_Final/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/DevWeb_Trab_Final/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -17,7 +17,7 @@
             </div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Por favor insira número de telemóvel."/>
-                <label asp-for="Input.PhoneNumber" class="form-label"></label>
+                <label asp-for="Input.PhoneNumber" class="form-label">Telemóvel</label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
             <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Guardar</button>
