--- a/DevWeb_Trab_Final/Areas/Identity/Pages/Account/Register.cshtml
+++ b/DevWeb_Trab_Final/Areas/Identity/Pages/Account/Register.cshtml
@@ -8,7 +8,7 @@
 <h2>Criar um novo utilizador.</h2>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4" >
 
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
 
@@ -22,7 +22,7 @@
             }
             
             <div class="row">
-                <div class"col-md-6">
+                <div class"col-6 col-md-4">
                     <hr />
                     <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
 
@@ -47,7 +47,7 @@
 
                 @if (User.IsInRole("Administrador"))
                 {
-                    <div class"col-md-6">
+                    <div class"col-6 col-md-4">
 
                         <div class="form-floating mb-3">
                             <input asp-for="Input.Funcionario.Nome" class="form-control" />
@@ -83,7 +83,7 @@
                 }
                 @if (User.IsInRole("Funcionario") || !User.Identity.IsAuthenticated)
                 {
-                    <div class"col-md-6">
+                    <div class"col-6 col-md-4">
 
                         <div class="form-floating mb-3">
                             <input asp-for="Input.Cliente.Nome" class="form-control" />
@@ -120,8 +120,21 @@
             </div>
         </form>
     </div>
+    <div class="col-12 col-md-8 text-center  smaller-image">
+        <h1 class="brand display-1">ReparaTECH</h1>
+        <div><img src="~/imagens/reparatech.png" alt="..." class="img-fluid" style="background-color: transparent;" alt="Responsive image"></div>
+    </div>
 </div>
+<style>
+    .brand {
+        font-family: 'Nabla', cursive;
+    }
 
+    .smaller-image {
+        width: 45%;
+    }
+
+</style>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
