--- a/DevWeb_Trab_Final/Areas/Identity/Pages/Account/Login.cshtml
+++ b/DevWeb_Trab_Final/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,11 +5,23 @@
     ViewData["Title"] = "Entrar";
 }
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
+<style>
+    .login-container {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        height: 60vh;
+        padding-top: 20px;
+    }
+
+</style>
+
+
+<div class="login-container">
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
+                <h1>@ViewData["Title"]</h1>
                 <h2>Use a sua conta local para entrar.</h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
@@ -23,12 +35,12 @@
                     <label asp-for="Input.Password" class="form-label">Password</label>
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
-                <div class="checkbox mb-3">
+                <!--<div class="checkbox mb-3">
                     <label asp-for="Input.RememberMe" class="form-label">
                         <input class="form-check-input" asp-for="Input.RememberMe" />
-                        @Html.DisplayNameFor(m => m.Input.RememberMe)
+                        Html.DisplayNameFor(m => m.Input.RememberMe)
                     </label>
-                </div>
+                </div>-->
                 <div>
                     <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
                 </div>
