--- a/DevWeb_Trab_Final/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/DevWeb_Trab_Final/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -4,19 +4,24 @@
     ViewData["Title"] = "Confirmar Registo";
 }
 
-<h1>@ViewData["Title"]</h1>
+<style>
+    p {
+        font-family: 'Oswald', sans-serif;
+        font-size: 30px;
+    }
+</style>
+
 @{
     if (@Model.DisplayConfirmAccountLink)
     {
-<p>
-    This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-    Normally this would be emailed: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
-</p>
+    <p>
+        <a id="confirm-link" href="@Model.EmailConfirmationUrl">Clique Aqui para Confirmar o seu Email!</a>
+    </p>
     }
     else
     {
 <p>
-        Please check your email to confirm your account.
+        Por favor cheque o seu Email para confirmar a sua Conta.
 </p>
     }
 }
