--- a/DevWeb_Trab_Final/Views/Home/Index.cshtml
+++ b/DevWeb_Trab_Final/Views/Home/Index.cshtml
@@ -8,11 +8,9 @@
     
 
     .custom-container {
-        width: 1200px;
-        margin-right: 0;
-        margin-left: 0;
-        padding-right: 0;
-        padding-left: 0;
+        display: flex;
+        justify-content: space-around;
+        height: 100vh;
     }
 
     .custom-column {
@@ -47,16 +45,26 @@
     <div class="row">
         <div class="col custom-column">
             <div class="corpo">
-                <h1 class="text-dark">Serviço de Reparação de Electrodomésticos</h1>
-            </div><br />
-           
+                <h1 class="text-dark">Serviço de Reparação de Dispositivos Eletrónicos</h1>
+            </div>
+            
             <div class="home-txt">
                 <p class="introd">
-                    Bem-vindo ao nosso site, a sua referência confiável para reparação de eletrodomésticos! Somos uma loja especializada em resolver problemas nos seus aparelhos domésticos. Contamos com uma equipa de técnicos altamente qualificados e experientes, prontos para ajudar em todas as situações.
+                    Bem-vindo a ReparaTECH! A sua referência confiável para reparação dos vossos diversos Dispositivos Eletrónicos! Contamos com uma equipa de técnicos altamente qualificados e experientes, prontos para ajudar em todas as situações.
                 </p>
-                <p class="introd" >Os nossos técnicos são especialistas nas suas áreas, com habilidades únicas e conhecimentos especializados em diversos tipos de eletrodomésticos. Independentemente do problema com a sua máquina de lavar roupa, frigorífico, fogão, máquina de lavar louça, micro-ondas ou outro aparelho, oferecemos soluções eficientes e de qualidade.</p>
-                <p class="introd">Entendemos a importância da confiança ao escolher uma loja de reparação de eletrodomésticos, por isso dedicamo-nos a oferecer um serviço excecional aos nossos clientes. O nosso objetivo é superar as suas expectativas, oferecendo reparações rápidas, eficientes e acessíveis, com um atendimento amigável e personalizado.</p>
-
+                <p class="introd" >Os nossos técnicos são especialistas nas suas áreas, com habilidades únicas e conhecimentos especializados em diversos tipos de disposistivos. Independentemente do problema com a sua máquina de lavar roupa, Portátil, fogão, Telemóvel, micro-ondas ou outro aparelho, oferecemos soluções eficientes e de qualidade!</p>
+                
+                @if (!User.Identity.IsAuthenticated) {
+                    <p class="introd" >Se precisa de reparar um Dispositivo e é novo no nosso site:<br/>
+                        <a class="introd" asp-area="Identity" asp-page="/Account/Register"><b>Clique Aqui para se Registar!</b></a>
+                    </p>
+                
+                    <p>Se já encontra Registado na nossa Loja:<br/>
+                        <a class="introd" asp-area="Identity" asp-page="/Account/Login"><b>Clique Aqui para Entrar!</b></a>
+                        <br/>
+                    </p>
+                }
+                
             </div>
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
@@ -76,7 +84,7 @@
                 </div>
             </div>
         </div>
-        <div class="col custom-column1"><br /><br />
+        <div class="col custom-column1">
             <img src="~/imagens/reparatech.png" alt="..." class="img-fluid" alt="Responsive image">
         </div>
     </div>
