Criação de Registos por defeito + Retoques finais no app
Co-Authored-By: FranciscoCarvalho2001 <101589943+FranciscoCarvalho2001@users.noreply.github.com>

--- a/DevWeb_Trab_Final/Views/Funcionarios/Administrador.cshtml
+++ b/DevWeb_Trab_Final/Views/Funcionarios/Administrador.cshtml
@@ -54,9 +54,6 @@
                                     @Html.DisplayNameFor(model => model.Clientes.First().Telemovel)
                                 </th>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.Clientes.First().UserId)
-                                </th>
-                                <th>
                                     Opções
                                 </th>
                             </tr>
@@ -82,9 +79,6 @@
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Telemovel)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.UserId)
                                     </td>
                                     <td>
                                         <a asp-controller="Clientes" asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
@@ -357,17 +351,18 @@
             </div>
         </div>
     }
-    @if (User.IsInRole("Administrador") )
-    {
+    @if (User.IsInRole("Administrador") || User.IsInRole("Funcionario")) {
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingFuncionarios">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFuncionarios" aria-expanded="false" aria-controls="collapseFuncionarios">Funcionarios</button>
             </h2>
             <div id="collapseFuncionarios" class="accordion-collapse collapse" aria-labelledby="headingFuncionarios" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <p>
-                        <a asp-area="Identity" asp-page="/Account/Register">Registar novo Funcionario</a>
-                    </p>
+                    @if (User.IsInRole("Administrador")) {
+                        <p>
+                            <a asp-area="Identity" asp-page="/Account/Register">Registar novo Funcionario</a>
+                        </p>
+                    }
                     <table class="table">
                         <thead>
                             <tr>
@@ -389,9 +384,12 @@
                                 <th>
                                     @Html.DisplayNameFor(model => model.Funcionarios.First().Especializacao)
                                 </th>
-                                <th>
-                                    Opções
-                                </th>
+                                @if (User.IsInRole("Administrador"))
+                                {
+                                    <th>
+                                        Opções
+                                    </th>
+                                }
                             </tr>
                         </thead>
                         <tbody>
@@ -416,11 +414,13 @@
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Especializacao)
                                     </td>
-                                    <td>
-                                        <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                                        <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
-                                        <a asp-action="Delete" asp-route-id="@item.Id">Apagar</a>
-                                    </td>
+                                    @if (User.IsInRole("Administrador")) {
+                                        <td>
+                                            <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                                            <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
+                                            <a asp-action="Delete" asp-route-id="@item.Id">Apagar</a>
+                                        </td>
+                                    }
                                 </tr>
                             }
                         </tbody>
