--- a/DevWeb_Trab_Final/Views/Home/Index.cshtml
+++ b/DevWeb_Trab_Final/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
     .custom-container {
         display: flex;
         justify-content: space-around;
-        height: 100vh;
+        height: 100%;
     }
 
     .custom-column {
