--- a/DevWeb_Trab_Final/Views/Reparacaos/Details.cshtml
+++ b/DevWeb_Trab_Final/Views/Reparacaos/Details.cshtml
@@ -37,13 +37,13 @@
             @Html.DisplayNameFor(model => model.Dispositivo)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Dispositivo.Id)
+            @Html.DisplayFor(model => model.Dispositivo.Tipo)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Funcionarios)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Funcionarios.Id)
+            @Html.DisplayFor(model => model.Funcionarios.Nome)
         </dd>
     </dl>
 </div>
