--- a/DevWeb_Trab_Final/Views/Shared/_Layout.cshtml
+++ b/DevWeb_Trab_Final/Views/Shared/_Layout.cshtml
@@ -92,7 +92,7 @@
                             @if (User.IsInRole("Funcionario") || User.IsInRole("Administrador"))
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" asp-area="" asp-controller="Funcionarios" asp-action="Administrador">Administrador</a>
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Funcionarios" asp-action="Administrador">Administração</a>
                                 </li>
                             }
                             
@@ -121,7 +121,7 @@
 
     <footer class="footer text-muted bg-dark">
         <div class="container">
-            &copy; 2023 - ReparaTech - <a asp-area="" asp-controller="Home" asp-action="Privacy">Política de Privacidade</a>
+            &copy; 2023 - ReparaTech - Dinis Silva - 23031 / Francisco Silva 23035 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Política de Privacidade</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
