--- a/DevWeb_Trab_Final/Views/Funcionarios/Administrador.cshtml
+++ b/DevWeb_Trab_Final/Views/Funcionarios/Administrador.cshtml
@@ -139,7 +139,7 @@
                                         @Html.DisplayFor(modelItem => item.DataInicio)
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.Custo)
+                                        @Html.DisplayFor(modelItem => item.Custo)€
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Observacao)
@@ -201,7 +201,7 @@
                                             @Html.DisplayFor(modelItem => item.DataFim)
                                         </td>
                                         <td>
-                                            @Html.DisplayFor(modelItem => item.Custo)
+                                            @Html.DisplayFor(modelItem => item.Custo)€
                                         </td>
                                         <td>
                                             @Html.DisplayFor(modelItem => item.Observacao)
