--- a/DevWeb_Trab_Final/Views/Reparacaos/Details.cshtml
+++ b/DevWeb_Trab_Final/Views/Reparacaos/Details.cshtml
@@ -25,7 +25,7 @@
             @Html.DisplayNameFor(model => model.Custo)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Custo)
+            @Html.DisplayFor(model => model.Custo)€
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Observacao)
