--- a/DevWeb_Trab_Final/Views/Home/Index.cshtml
+++ b/DevWeb_Trab_Final/Views/Home/Index.cshtml
@@ -66,6 +66,7 @@
                 }
                 
             </div>
+            @*Lista de Especializações dos funcionarios*@
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingClientes">
