--- a/DevWeb_Trab_Final/Views/Funcionarios/Administrador.cshtml
+++ b/DevWeb_Trab_Final/Views/Funcionarios/Administrador.cshtml
@@ -20,6 +20,7 @@
 
 
     @if (User.IsInRole("Administrador") || User.IsInRole("Funcionario")){
+        @*Cliente*@
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingClientes">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseClientes" aria-expanded="false" aria-controls="collapseClientes">Clientes</button>
@@ -95,6 +96,7 @@
 }
     @if (User.IsInRole("Administrador") || User.IsInRole("Funcionario"))
     {
+        @*Reparação*@
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingReparacoes">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseReparacoes" aria-expanded="false" aria-controls="collapseReparacoes">Reparações</button>
@@ -112,7 +114,7 @@
                                     @Html.DisplayNameFor(model => model.Reparacao.First().DataInicio)
                                 </th>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.Reparacao.First().Custo)
+                                    @Html.DisplayNameFor(model => model.Reparacao.First().Custo)/€
                                 </th>
                                 <th>
                                     @Html.DisplayNameFor(model => model.Reparacao.First().Observacao)
@@ -171,7 +173,7 @@
                                     @Html.DisplayNameFor(model => model.Reparacao.First().DataFim)
                                 </th>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.Reparacao.First().Custo)
+                                    @Html.DisplayNameFor(model => model.Reparacao.First().Custo)/€
                                 </th>
                                 <th>
                                     @Html.DisplayNameFor(model => model.Reparacao.First().Observacao)
@@ -228,6 +230,7 @@
     }
     @if (User.IsInRole("Administrador") || User.IsInRole("Funcionario"))
     {
+        @*Dispositivos*@
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingDispositivos">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseDispositivos" aria-expanded="false" aria-controls="collapseDispositivos">Dispositivos</button>
@@ -351,7 +354,9 @@
             </div>
         </div>
     }
-    @if (User.IsInRole("Administrador") || User.IsInRole("Funcionario")) {
+    @if (User.IsInRole("Administrador") || User.IsInRole("Funcionario")) 
+    {
+        @*Funcionario*@
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingFuncionarios">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFuncionarios" aria-expanded="false" aria-controls="collapseFuncionarios">Funcionarios</button>
